<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="banner_ad_unit_id">ca-app-pub-9637466047541795/2234777117</string>
    <string name="facebook_app_id">1656758407875630</string>
    <string name="dropbox_app_key">v949u8qg4zk87kq</string>
    <string name="facebook_client_token">96b3eaf85a5e463df5675797caeba878</string>
    <string name="app_name">GrieeX</string>
    <string name="about">About</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="submit">Submit</string>
    <string name="no_record">Record not found.</string>
    <string name="please_wait">Please wait&#8230;</string>
    <string name="no_connection">Please check your internet connection and try again.</string>
    <string name="crash_toast_text">An unexpected error has occurred!</string>
    <string name="download_ticker">Loading to movie details&#8230;</string>
    <string name="version">Version</string>
    <string name="author">Author</string>
    <string name="license">License</string>
    <string name="web">Web</string>
    <string name="more">More</string>
    <string name="action_settings">Settings</string>
    <string name="action_menu">Menu</string>
    <string name="menu_show">Show</string>
    <string name="menu_delete">Delete</string>
    <string name="movies">Movies</string>
    <string name="series">TV Shows</string>
    <string name="collection">Collection</string>
    <string name="search_imdb">Add</string>
    <string name="character_list">Character List</string>
    <string name="imdb_250">Top 250</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="add_to_collection">Add to Collection</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="show">Show</string>
    <string name="list">List View</string>
    <string name="gallery">Gallery View</string>
    <string name="general">General</string>
    <string name="cast">Cast</string>
    <string name="comments">Comments</string>
    <string name="director">Director</string>
    <string name="writer">Writer</string>
    <string name="country">Country</string>
    <string name="language">Language</string>
    <string name="plot">Plot</string>
    <string name="english_plot">Plot</string>
    <string name="other_plot">Other Plot</string>
    <string name="subtitle">Subtitle</string>
    <string name="dubbing">Dubbing</string>
    <string name="budget">Budget</string>
    <string name="production_company">Production Company</string>
    <string name="release_date">Release Date</string>
    <string name="seen_checked">Marked as watched.</string>
    <string name="seen_unchecked">Marked as unwatched.</string>
    <string name="alert_import">Found an update database file. Do you want to update file?</string>
    <string name="grieex_updating">Updating GrieeX.\nPlease wait…</string>
    <string name="grieex_updating_error1">Update has not been completed.</string>
    <string name="grieex_updating_error2">The internet connection is needed for the updating.</string>
    <string name="grieex_updating_try">Try again</string>
    <string name="get_info">Get Info</string>
    <string name="imdb">www.imdb.com</string>
    <string name="tmdb">www.themoviedb.org</string>
    <string name="sinemalar">www.sinemalar.com</string>
    <string name="beyazperde">www.beyazperde.com</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="getting_backdrops_please_wait">Backdrops loading. Please wait…</string>
    <string name="batch_processing">Batch Processing</string>
    <string name="batch_processing_started">Process has been started. You can track the process on the statusbar.</string>
    <string name="batch_processing_completed">Batch processing completed</string>
    <string name="archives_number">Archives Number</string>
    <string name="user_column1">User Column 1</string>
    <string name="user_column2">User Column 2</string>
    <string name="user_column3">User Column 3</string>
    <string name="user_column4">User Column 4</string>
    <string name="user_column5">User Column 5</string>
    <string name="user_column6">User Column 6</string>
    <string name="delete_movie">Your choice movie will be deleted. Are you sure?</string>
    <string name="delete_series">Your choice TV show will be deleted. Are you sure?</string>
    <string name="clear_cache">Clear Cache (%s)</string>
    <string name="clear_cache_alert">Do you really want to clear the cache?</string>
    <string name="list_name">List Name</string>
    <string name="add_to_list">Add to the list</string>
    <string name="add_multiple_to_the_list">Add multiple to the list</string>
    <string name="new_list_name">New List Name</string>
    <string name="lists">Lists</string>
    <string name="added_to_the_list">Added to the list.</string>
    <string name="movie_title">Movie Title</string>
    <string name="movie_added">Movie has been added. Details will be updated automatically.</string>
    <string name="series_added">TV show has been added. Details will be updated automatically.</string>
    <string name="can_not_be_empty">Can not be empty!</string>
    <string name="alert1">Your choice movie will be deleted. Are you sure?</string>
    <string name="alert2">Your choice custom list will be deleted. Are you sure?</string>
    <string name="alert3">Select a list!</string>
    <string name="alert4">You should download GrieeX Pro to use this function!</string>
    <string name="alert5">The database will be uploaded on Dropbox. Are you sure?</string>
    <string name="alert6">The database will be imported from Dropbox and changed with your current database. Are you sure?</string>
    <string name="alert7">You are on the maximum record limits on the free version of GrieeX. You should download GrieeX Pro to add more records!</string>
    <string name="alert8">Please select a valid backup file!</string>
    <string name="alert9">Please select a valid item!</string>
    <string name="imdb_info">imdb info</string>
    <string name="go_pro_version">Go Pro Version</string>
    <string name="choose_language">Choose Language</string>
    <string name="filter">Filter</string>
    <string name="clear">Clear</string>
    <string name="seen_state">Seen State</string>
    <string name="genre">Genre</string>
    <string name="remove_list">Remove from list</string>
    <string name="remove_list_multiple">Multiple remove from list</string>
    <string name="get_movie_infos">Get Movie Info</string>
    <string name="get_backdrops">Get Backdrops</string>
    <string name="get_posters">Get Posters</string>
    <string name="backup">Backup/Restore</string>
    <string name="backup_database">Backup database</string>
    <string name="restore_database">Restore database</string>
    <string name="dropbox">Backup/Restore Dropbox</string>
    <string name="backup_dropbox">Backup Dropbox</string>
    <string name="restore_dropbox">Restore Dropbox</string>
    <string name="restore_completed">Restore Completed</string>
    <string name="backup_completed">Backup Completed</string>
    <string name="dropbox_download">Download database from Dropbox.</string>
    <string name="dropbox_downloaded">Downloading is completed.</string>
    <string name="dropbox_upload">Upload database to dropbox</string>
    <string name="dropbox_uploaded">Uploading is completed.</string>
    <string name="refresh">Refresh</string>
    <string name="content_providers">Content Providers</string>
    <string name="marked_as_seen">Marked as watched</string>
    <string name="marked_as_not_seen">Marked as unwatched</string>
    <string name="completed">Completed</string>
    <string name="not_completed">Not Completed</string>
    <string name="rate_google_play">Rate GrieeX on Google Play</string>
    <string name="public_lists">Public Lists</string>
    <string name="popular">Popular</string>
    <string name="now_playing">Now Playing</string>
    <string name="upcoming">Upcoming</string>
    <string name="files">Files</string>
    <string name="video">Video</string>
    <string name="screen_resolution">Screen Resolution</string>
    <string name="video_codec">Video Codec</string>
    <string name="bitrate">Bitrate</string>
    <string name="fps">FPS</string>
    <string name="video_aspect_ratio">Video Aspect Ratio</string>
    <string name="runningtime">Runtime</string>
    <string name="total_frames">Total Frames</string>
    <string name="video_size">Video Size</string>
    <string name="file_size">File Size</string>
    <string name="audio">Audio</string>
    <string name="audio_codec">Audio Codec</string>
    <string name="channels">Channels</string>
    <string name="sample_rate">Sample Rate</string>
    <string name="audio_size">Audio Size</string>
    <string name="rta_dialog_title">Please rate us!</string>
    <string name="rta_dialog_message">If you like GrieeX, please rate us only in a few minutes. Thank you for your support.</string>
    <string name="rta_dialog_ok">Rate Now</string>
    <string name="rta_dialog_cancel">Later</string>
    <string name="rta_dialog_no">No thanks</string>
    <string name="rls_type">Release Type</string>
    <string name="rls_group">Release Group</string>
    <string name="personal_rating">Personal Rating</string>
    <string name="ranking">Ranking</string>
    <string name="ranking_original_name">Original Name</string>
    <string name="ranking_archives_number">Archives Number</string>
    <string name="ranking_insert_date">Insert Date</string>
    <string name="ranking_update_date">Update Date</string>
    <string name="ranking_imdb_rating">Imdb Rating</string>
    <string name="ranking_tmdb_rating">Tmdb Rating</string>
    <string name="barcode_not_found">Barcode not found!</string>
    <string name="share">Share</string>
    <string name="via_imdb">Via imdb.com link</string>
    <string name="via_tmdb">Via themoviedb.org link</string>
    <string name="twice_back">Press back again to exit application</string>
    <string name="links">Links</string>
    <string name="theme">Theme</string>
    <string name="english_only_please">English only please.</string>
    <string name="comment_min_alert">Comments must be at least 5 words.</string>
    <string name="post_comment">Post Comment</string>
    <string name="comment_published">Your comment has been published.</string>
    <string name="watch_trailer">Watch Trailer</string>
    <string name="detail">Detail</string>
    <string name="exist_movie_message">Movie was added to the database previously. Are you sure you want to continue?</string>
    <string name="logout">Logout</string>
    <string name="overview">Overview</string>
    <string name="seasons">Seasons</string>
    <string name="season">Season</string>
    <string name="series_title">TV show Title</string>
    <string name="continuing">Continuing</string>
    <string name="ended">Ended</string>
    <string name="minute">%s min</string>
    <string name="season_watched">Mark season as watched</string>
    <string name="season_not_watched">Mark season as not watched</string>
    <string name="season_collected">Mark season as collected</string>
    <string name="season_not_collected">Mark season as not collected</string>
    <string name="season_favorite">Mark season as favorite</string>
    <string name="season_not_favorite">Mark season as not favorite</string>
    <string name="delete_season">Delete Season</string>
    <string name="login_failed">Login in failed. Please try again.</string>
    <string name="logging_in">Logging in…</string>
    <string name="login_successful">Login successful.</string>
    <string name="login_description">Sign in to through the Trakt website and give GrieeX access to your account</string>
</resources>