<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_get_info"
        android:menuCategory="system"
        android:orderInCategory="100"
        android:title="@string/get_info"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_get_backdrops"
        android:menuCategory="system"
        android:orderInCategory="100"
        android:title="@string/get_backdrops"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_add_to_list"
        android:menuCategory="system"
        android:orderInCategory="100"
        android:title="@string/add_to_list"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_delete"
        android:menuCategory="system"
        android:orderInCategory="100"
        android:title="@string/delete"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_share"
        android:menuCategory="system"
        android:orderInCategory="100"
        android:title="@string/share"
        app:showAsAction="never"/>

</menu>