<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />
    <item
        android:id="@+id/action_filter"
        android:icon="@drawable/filter"
        android:title="@string/filter"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/action_cancel"
        android:icon="@drawable/ic_close"
        android:title="@string/cancel"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_ok"
        android:icon="@drawable/ic_check"
        android:title="@string/ok"
        android:visible="false"
        app:showAsAction="always" />
</menu>