<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"  xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        android:icon="@drawable/search"
        app:showAsAction="ifRoom|collapseActionView"
        android:title="@string/search"/>

    <item
        android:id="@+id/action_cancel"
        android:icon="@drawable/ic_close"
        android:title="@string/cancel"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_ok"
        android:icon="@drawable/ic_check"
        android:title="@string/ok"
        android:visible="false"
        app:showAsAction="always" />
</menu>