<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="25dp"
    android:layout_marginLeft="25dp"
    android:layout_marginRight="25dp"
    android:layout_marginTop="25dp"
    android:orientation="vertical" android:padding="10dp">

    <CheckBox
        android:id="@+id/cbMovieInfos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_movie_infos" />

    <CheckBox
        android:id="@+id/cbBackdrops"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_backdrops" />

    <CheckBox
        android:id="@+id/cbPosters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_posters" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_marginTop="20dp"
        android:background="@color/gray2" />


    <Button
        android:id="@+id/btnStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@drawable/selector_button1"
        android:text="@string/start" />
</LinearLayout>
